--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
             <version>0.0.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+
     </dependencies>
 
     <distributionManagement>
