--- a/pom.xml
+++ b/pom.xml
@@ -67,12 +67,12 @@
         <repository>
             <id>releases</id>
             <name>Internal Release</name>
-            <url>http://nexus.http.com/repository/maven-releases/</url>
+            <url>http://nexus.fxin.com/repository/maven-releases/</url>
         </repository>
         <snapshotRepository>
             <id>snapshots</id>
             <name>Internal Snapshots</name>
-            <url>http://nexus.http.com/repository/maven-snapshots/</url>
+            <url>http://nexus.fxin.com/repository/maven-snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
 </project>
